[build-system]
requires = ["setuptools >= 68.2.2"]
build-backend = "setuptools.build_meta"

[project]
name = "kolibrify"
dynamic = ["version"]
dependencies = [
  "datasets ~= 2.16.1",
  "rich ~= 13.7.0",
  "typer ~= 0.12.3",
  "transformers ~= 4.41.1",
  "trl ~= 0.8.6",
  "unsloth ~= 2024.2",
  "vllm ~= 0.4.2",
  "langdetect ~= 1.0.9",
  "nltk ~= 3.8.1",
  "pymorphy2 ~= 0.9.1",
  "immutabledict ~= 4.1.0"
]
requires-python = ">=3.10"
authors = [
  {name = "Igor Kilbas", email = "whitemarsstudios@gmail.com"}
]
maintainers = [
  {name = "Igor Kilbas", email = "whitemarsstudios@gmail.com"}
]
description = "A small framework for curriculum training of LLMs"
readme = "README.rst"
license = {file = "LICENSE"}
keywords = [
  "large language model",
  "finetuning", 
  "llm finetuning", 
  "gpt", 
  "instruction following", 
  "dpo",
  "direct preference optimization",
  "curriculum learning"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: LLM Development",
  "Programming Language :: Python"
]

[tool.setuptools.dynamic]
version = {attr = "kolibrify.__version__"}

[project.urls]
Homepage = "https://github.com/oKatanaaa/kolibrify"
Repository = "https://github.com/oKatanaaa/kolibrify"
"Bug Tracker" = "https://github.com/oKatanaaa/kolibrify/issues"

[project.scripts]
kolibrify-sft = "kolibrify.sft_run:run"
kolibrify-dpo = "kolibrify.dpo_run:run"
kolibrify-merge = "kolibrify.merge_lora:run"
kolibrify-push = "kolibrify.push_to_hub:run"
kolibrify-predict = "kolibrify.predict:run"
kolibrify-eval-ifeval = "kolibrify.eval.ifeval.evaluate:run"