[build-system]
requires = ["setuptools >= 68.2.2"]
build-backend = "setuptools.build_meta"

[project]
name = "kolibrify"
dynamic = ["version"]
dependencies = [
  "unsloth == 2025.11.3",
  "datasets == 4.3.0",
  "transformers == 4.57.2",
  "trl == 0.24.0",
  "accelerate == 1.12.0",
  "vllm == 0.11.2",
  "huggingface_hub == 0.36.0"
]
requires-python = ">=3.10"
authors = [
  {name = "Igor Kilbas", email = "whitemarsstudios@gmail.com"}
]
maintainers = [
  {name = "Igor Kilbas", email = "whitemarsstudios@gmail.com"}
]
description = "A small framework for curriculum training of LLMs"
readme = "README.rst"
license = {file = "LICENSE"}
keywords = [
  "large language model",
  "finetuning", 
  "llm finetuning", 
  "gpt", 
  "instruction following", 
  "dpo",
  "direct preference optimization",
  "curriculum learning"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: LLM Development",
  "Programming Language :: Python"
]

[tool.setuptools.dynamic]
version = {attr = "kolibrify.__version__"}

[project.urls]
Homepage = "https://github.com/oKatanaaa/kolibrify"
Repository = "https://github.com/oKatanaaa/kolibrify"
"Bug Tracker" = "https://github.com/oKatanaaa/kolibrify/issues"

[project.scripts]
kolibrify-sft = "kolibrify.sft_run:run"
kolibrify-dpo = "kolibrify.dpo_run:run"
kolibrify-merge = "kolibrify.merge_lora:run"
kolibrify-push = "kolibrify.push_to_hub:run"
kolibrify-predict = "kolibrify.predict:run"
kolibrify-eval-ifeval = "kolibrify.eval.ifeval.evaluate:run"
kolibrify-chat = "kolibrify.chat:run"